# fh6-ooc-radio

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  NOTICE  README.md  config.example.toml
.github/workflows/: build.yaml
cmake/: mingw-w64-x86_64.cmake
include/fh6/: audio_source.hpp  audio_source_manager.hpp  config.hpp  config_store.hpp  deps.hpp  log.hpp  playback_dsp.hpp  ring_buffer.hpp  safe_mem.hpp  subprocess.hpp
include/fh6/fmod/: dsp_bridge.hpp  dsp_control_loop.hpp  game_state_probe.hpp  metadata_injector.hpp  pe_image.hpp  radio_discovery.hpp  sig_scanner.hpp  texture_injector.hpp
include/fh6/net/: http_get.hpp
include/fh6/sources/: ooc_radio_source.hpp
include/fh6/worker/: ipc_protocol.hpp  worker_client.hpp
scripts/: build.ps1  build.sh  dist-readme.txt  get-deps.ps1  get-deps.sh  install.ps1  install.sh  lint.ps1
src/: audio_source_manager.cpp  bridge.cpp  config.cpp  config_store.cpp  deps.cpp  log.cpp  playback_dsp.cpp  ring_buffer.cpp  subprocess.cpp
src/fmod/: dsp_bridge.cpp  dsp_control_loop.cpp  game_state_probe.cpp  metadata_injector.cpp  pe_image.cpp  radio_discovery.cpp  sig_scanner.cpp  texture_injector.cpp
src/net/: http_get.cpp
src/proxy/: dll_main.cpp  version.def
src/sources/: ooc_radio_source.cpp
src/worker/: worker_client.cpp  worker_main.cpp
